Fix the horizontal scroll functionality

--- a/src/App.css
+++ b/src/App.css
@@ -25,15 +25,9 @@ body {
   color: #172a3a;
   font-size: 25px;
   border-radius: 4px;
-  position: absolute;
-  bottom: -20px;
-  right: 80px;
   transform: scale(1, 1);
   transition: 0.3s all ease-in-out;
-}
-
-.right-arrow {
-  right: 140px;
+  padding: 10px;
 }
 
 .right-arrow:hover,
@@ -41,11 +35,11 @@ body {
   transform: scale(1.3, 1.3);
 }
 
-.react-horizontal-scrolling-menu--wrapper {
+/* .react-horizontal-scrolling-menu--wrapper {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
-}
+} */
 
 .detail-image {
   width: 729px;
